# doc_searcher

./: .gitignore  cfg.py  doc_searcher.py  main.py  pyproject.toml  run.sh
scripts/: db_init.py
src/: doc_discovery.py  llm_parser.py  web_crawler.py
src/agents/: discoverer.py  summarizer.py
src/models/: knowledge.py
src/utils/: db_context.py  loggers.py
