[project]
name = "doc-searcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.1.9",
    "beautifulsoup4>=4.13.3",
    "crawl4ai>=0.5.0.post4",
    "google-genai>=1.5.0",
    "mcp[cli]>=1.3.0",
    "pydantic>=2.10.6",
]
